--- a/fips/Makefile
+++ b/fips/Makefile
@@ -56,14 +56,6 @@ testapps:
 	@if [ -z "$(THIS)" ]; then $(MAKE) -f $(TOP_fips)/Makefile reflect THIS=$@; fi
 
 all: all_fips
-all_fips:
-	@if [ -n "$(FIPSCANISTERONLY)" ]; then \
-		$(MAKE) -e subdirs lib ; \
-	elif [ -z "$(FIPSLIBDIR)" ]; then \
-		$(MAKE) -e subdirs lib fips_premain_dso$(EXE_EXT); \
-	else  \
-		$(MAKE) -e lib fips_premain_dso$(EXE_EXT) fips_standalone_sha1$(EXE_EXT); \
-	fi
 
 # Idea behind fipscanister.o is to "seize" the sequestered code between
 # known symbols for fingerprinting purposes, which would be commonly
@@ -122,8 +114,11 @@ fips_premain_dso$(EXE_EXT): fips_premain.c
 		$(FIPSLIBDIR)fipscanister.o ../libcrypto.a $(EX_LIBS)
 
 ifdef FIPSCANISTERONLY
+all_fips: subdirs_fips lib
 else ifndef FIPSLIBDIR
+all_fips: subdirs_fips lib fips_premain_dso$(EXE_EXT)
 else
+all_fips: lib fips_premain_dso$(EXE_EXT) fips_standalone_sha1$(EXE_EXT)
 include fips_standalone_sha1.mk
 endif
 
